
3.0-004
  - Do a bit of recasting in order to make cleaner compiles on ia64 systems.
3.0-005
  - Fix errors in gamma spectrum increment.  When there are no valid parameters
    in an event, the outer loop of the 2d gamma spectrum increment will
    loop almost infinitely and eventually segfault.
3.0-006
   - Retry pipe data source select if it fails with eintr.
   - Fix defect 188 - Grobj files write out spectrum ids rather than 
     names.. The fix will read old files, but new files will use
     names.
   - Fix issue with reading old tcl-list files: the treeparameter command
     was invoked with the wrong number of parameters.
   - Fix error in saving .sdef files in old treeparameter gui.
   - Fix buffer overflow error in grprint.cc found by Dave Caussyn.
   - Remove illegal default argument in PointlistGate.h

SpecTcl-3.0-007
   - Credit D. Bazin as original author of TreeParam in the sources.
   - Fix configuration not always finding motif headers on current systems.
   - Fix 64-bit uncleanliness in Xamine

SpecTcl-3.0-008
   - Added wysiwyg printing based on image capture from the frames.
   - Fix defects 195, 196: Gri was emitting epsf which printers would
     smoosh all on one page. Print setup dialog's print command had
     a duplicate widget name that made it operate strangely.
   - Added jumboscripted ..scriptable readout for buffers > 64Kwords.
   - Check for gd in configure and create appropriate compiler/ld
     options.
SpecTcl-3.0-009
   - Defect 197 : scaling.h the averaging boxes for 2d average reduction
                  were too wide by a channel
   - Defect 200 : long/int mixup that is 64 bit unclean in gamma1DL.cpp
                  This makes 64bit gamma1dL spectra have only everyother
                  channel set and can overwrite past the end of the spectrum
                  as well fi the parameter range covers more than the
                  spectrum range!!
   - Defect 209 : more issues like Defect 200.