@@ -372,3 +372,4 @@ SpecTcl-3.0-009
                   as well fi the parameter range covers more than the
                   spectrum range!!
    - Defect 209 : more issues like Defect 200.
+   - Defect 210 : SpecTcl/AppInit.cpp had sscanf of int -> long. 64 bit bad.
